Java 17 migration.