@@ -111,7 +111,7 @@ public class ASCIITreeUtils {
 			int j=i+1;
 			String t = (String) v.elementAt(i);
 			int n = getLevel(t);
-			String level = new Integer(n).toString();
+			String level = Integer.valueOf(n).toString();
 			if (maxLevel < n) {
 				maxLevel = n;
 			}
@@ -125,7 +125,7 @@ public class ASCIITreeUtils {
 			int j=i+1;
 			String t = (String) v.elementAt(i);
 			int n = getLevel(t);
-			String level = new Integer(n).toString();
+			String level = Integer.valueOf(n).toString();
 			if (maxLevel < n) {
 				maxLevel = n;
 			}
