@@ -526,7 +526,7 @@ public class JSONArray implements Serializable {
      * @return this.
      */
     public JSONArray put(double value) throws JSONException {
-        Double d = new Double(value);
+        Double d = Double.valueOf(value);
         JSONObject.testValidity(d);
         put(d);
         return this;
@@ -551,7 +551,7 @@ public class JSONArray implements Serializable {
      * @return this.
      */
     public JSONArray put(long value) {
-        //put(new Long(value));
+        //put(Long.valueOf(value));
         put(Long.valueOf(value));
         return this;
     }
@@ -623,7 +623,7 @@ public class JSONArray implements Serializable {
      *         finite.
      */
     public JSONArray put(int index, double value) throws JSONException {
-        put(index, new Double(value));
+        put(index, Double.valueOf(value));
         return this;
     }
 
@@ -654,7 +654,7 @@ public class JSONArray implements Serializable {
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, long value) throws JSONException {
-        //put(index, new Long(value));
+        //put(index, Long.valueOf(value));
         put(index, Long.valueOf(value));
         return this;
     }
